tests/errors/unescaped-delimiter.ssv
name:string | desc:string
alice       | hello
bob         | foo;bar
